tests/machine/x/scala/group_by_conditional_sum.error
exit status 1
/workspace/mochi/tests/machine/x/scala/group_by_conditional_sum.scala:9: error: value map is not a member of group_by_conditional_sum._Group[String,group_by_conditional_sum.Result]
  val result = (((for { i <- items } yield (i.cat, Result(i = i))).groupBy(_._1).map{ case(k,list) => _Group(k, list.map(_._2)) }.toList).sortBy(g => g.key)).map{ g => Result1(cat = g.key, share = (for { x <- g } yield if (x.flag != null) x.`val` else 0).sum / (for { x <- g } yield x.`val`).sum) }.toList
                                                                                                                                                                                                                 ^
/workspace/mochi/tests/machine/x/scala/group_by_conditional_sum.scala:9: error: value map is not a member of group_by_conditional_sum._Group[String,group_by_conditional_sum.Result]
  val result = (((for { i <- items } yield (i.cat, Result(i = i))).groupBy(_._1).map{ case(k,list) => _Group(k, list.map(_._2)) }.toList).sortBy(g => g.key)).map{ g => Result1(cat = g.key, share = (for { x <- g } yield if (x.flag != null) x.`val` else 0).sum / (for { x <- g } yield x.`val`).sum) }.toList
                                                                                                                                                                                                                                                                                 ^
two errors found
